--- a/dummy_coding.Rmd
+++ b/dummy_coding.Rmd
@@ -2,7 +2,7 @@ Dummy Coding Categorical Data
 ========================================================
 Stat 2*** 
 ---------------------------------------------------------
-Using the Turkeys dataset
+Using the Turkeys data set
 ### 
 
 ```{r}
@@ -11,8 +11,8 @@ head(turk)
 attach(turk)
 ```
 
-There are 3 levels within Origin,   
-therefore we must set one as a reference and the other 2 as dummy coded variables.  
+There are **3** levels within Origin,   
+therefore we must set **1** as a reference and the other **2** as dummy coded variables.  
 The variable we select as the reference is arbitrary.
 ### 
 To do this we will use the **ifelse** statement 
@@ -32,7 +32,7 @@ Z1X <- Z1*Age
 Z2X <- Z2*Age
 ```
 
-A new dataframe can now be made which includes the dummy coded variables.
+A new data frame can now be made which includes the dummy coded variables.
 ### 
 
 ```{r}
